# b70_ai_things

./: .gitattributes  .gitignore  27b_w8a8_research.md  AGENTS.md  CLAUDE.md  DUALCARD.md  FINDINGS.md  HANDOFF.md  JOURNAL.md  MIGRATION.md  MOONSHOT_RESEARCH.md  MTP_TODO.md  ORGANIZATION.md  QUANTS_TODO.md  README.md  RESEARCH_TODO.md  RESULTS.md  SHORTCOMINGS.md  STRATEGY.md  daily_driver_serve.sh  dp_nginx.conf  research_moe_optimizations.md  zml_for_us.md
agentic-eval/: README.md  configs.sh
contrib/: sglang_xpu_upstream.md
deploy/: README.md  b70-daily-driver.service
docs/: 20260624_devicelost_thoughts.md  20260625_bcs_wedge_rootcause.md  20260625_w8a8_27b_mtp_graph_campaign.md  20260702_kernel71_upgrade_plan.md  20260702_mamba_extra_buffer_xpu_plan.md  20260702_vllm_v0230_rebase_plan.md  20260703_faster_dd_plan.md  20260707_dd_mtp_piecewise_neo_abort.md  20260708_nvfp4_prefill_int8_and_fp8kv_investigation.md  20260721_headless_dp2_4bit_kickoff.md  20260722_mtp_fp8_prefixcache_kickoff.md  CLEANUP.md  COMMUNITY_CONFIGS.md  COMMUNITY_QUANTS.md  P2P_GPU.md  SERVE_TOMORROW_fallback.md  SERVING.md  handoff_decode_push_ar.md  hardware_b70_vs_spark.md  intel_support_per_backend.md  ornith_1.0_35b.md  patch_applicability_matrix.md  quant_methods.md  storage.md  torch_xpu_build_recipe.md  upstream_pytorch_xpugraph_replay_leak.md  wedge_evidence_20260625_bcs.txt
evals/: .gitignore  README.md  gsm8k_probe.py  requirements.txt
kernels/: README.md  SYCLTLA_SCAFFOLD.md  int8_gemm_kernel.patch  int8_gemm_w8a16.h  (+4 more)
zml/examples/w8a8/: BUILD.bazel  README.md  main.zig
(+793 files in other folders)
