load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_zig//zig:defs.bzl", "zig_binary")

zig_binary(
    name = "w8a8",
    args = [],
    data = [],
    main = "main.zig",
    deps = ["//zml"],
    visibility = ["//visibility:public"],
)

build_test(
    name = "test",
    targets = [":w8a8"],
)
